syntax = "proto3";

package calculator;
option go_package = "calcpb";

message SumNumbers {
    int64 num_1 = 1;
    int64 num_2 = 2;
}

message SumRequest {
    SumNumbers sumResult = 1;
}

message SumResponse {
    int64 result = 1;
}

message PrimeRequest {
    int64 num = 1;
}

message PrimeResponse {
    int64 result = 1;
}

service CalcService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse){};

    // Server Streaming
    rpc PrimeDecomposition(PrimeRequest) returns (stream PrimeResponse){};
}